ghc-6.2/hslibs/win32/Win32Menu_stub_ffi.h

extern void* prim_checkMenuItem(HMENU arg1,UINT arg2,UINT arg3);
extern int access_prim_checkMenuItem_gc_res2(HsPtr);
extern int access_prim_checkMenuItem_gc_failed(HsPtr);
extern void* access_prim_checkMenuItem_gc_failstring(HsPtr);
extern void* prim_checkMenuRadioItem(HMENU arg1,UINT arg2,UINT arg3,UINT arg4,UINT arg5);
extern int access_prim_checkMenuRadioItem_gc_failed(HsPtr);
extern void* access_prim_checkMenuRadioItem_gc_failstring(HsPtr);
extern void* prim_createMenu();
extern HMENU access_prim_createMenu_res1(HsPtr);
extern int access_prim_createMenu_gc_failed(HsPtr);
extern void* access_prim_createMenu_gc_failstring(HsPtr);
extern void* prim_createPopupMenu();
extern HMENU access_prim_createPopupMenu_res1(HsPtr);
extern int access_prim_createPopupMenu_gc_failed(HsPtr);
extern void* access_prim_createPopupMenu_gc_failstring(HsPtr);
extern void* prim_drawMenuBar(HWND arg1);
extern int access_prim_drawMenuBar_gc_failed(HsPtr);
extern void* access_prim_drawMenuBar_gc_failstring(HsPtr);
extern void* prim_enableMenuItem(HMENU arg1,UINT arg2,UINT arg3);
extern UINT access_prim_enableMenuItem_res1(HsPtr);
extern int access_prim_enableMenuItem_gc_failed(HsPtr);
extern void* access_prim_enableMenuItem_gc_failstring(HsPtr);
extern UINT prim_gMDI_USEDISABLED();
extern UINT prim_gMDI_GOINTOPOPUPS();
extern UINT prim_mF_BYCOMMAND();
extern UINT prim_mF_BYPOSITION();
extern UINT prim_mF_INSERT();
extern UINT prim_mF_CHANGE();
extern UINT prim_mF_APPEND();
extern UINT prim_mF_DELETE();
extern UINT prim_mF_REMOVE();
extern UINT prim_mF_USECHECKBITMAPS();
extern UINT prim_mF_POPUP();
extern UINT prim_mF_SYSMENU();
extern UINT prim_mF_HELP();
extern UINT prim_mF_MOUSESELECT();
extern UINT prim_mF_END();
extern UINT prim_mFT_STRING();
extern UINT prim_mFT_BITMAP();
extern UINT prim_mFT_MENUBARBREAK();
extern UINT prim_mFT_MENUBREAK();
extern UINT prim_mFT_OWNERDRAW();
extern UINT prim_mFT_RADIOCHECK();
extern UINT prim_mFT_SEPARATOR();
extern UINT prim_mFT_RIGHTORDER();
extern UINT prim_mFT_RIGHTJUSTIFY();
extern UINT prim_mFS_GRAYED();
extern UINT prim_mFS_DISABLED();
extern UINT prim_mFS_CHECKED();
extern UINT prim_mFS_HILITE();
extern UINT prim_mFS_ENABLED();
extern UINT prim_mFS_UNCHECKED();
extern UINT prim_mFS_UNHILITE();
extern UINT prim_mFS_DEFAULT();
extern UINT prim_tPM_LEFTBUTTON();
extern UINT prim_tPM_RIGHTBUTTON();
extern UINT prim_tPM_LEFTALIGN();
extern UINT prim_tPM_CENTERALIGN();
extern UINT prim_tPM_RIGHTALIGN();
extern UINT prim_tPM_TOPALIGN();
extern UINT prim_tPM_VCENTERALIGN();
extern UINT prim_tPM_BOTTOMALIGN();
extern UINT prim_tPM_HORIZONTAL();
extern UINT prim_tPM_VERTICAL();
extern UINT prim_tPM_NONOTIFY();
extern UINT prim_tPM_RETURNCMD();