ghc-6.2/hslibs/win32/Win32Menu.hs

module Win32Menu 
{-
       (
         MenuName
       , checkMenuItem
       , checkMenuRadioItem
       , createMenu
       , createPopupMenu
       , deleteMenu
       , destroyMenu
       , drawMenuBar
       , enableMenuItem
       , getMenu
       , getMenuDefaultItem
       , getMenuItemCount
       , getMenuItemID
       , getMenuItemInfo
       , getMenuItemRect
       , getMenuState
       , getSubMenu
       , getSystemMenu
       , hiliteMenuItem
       , insertMenuItem
       , isMenu
       , loadMenu
       , menuItemFromPoint
       , setMenu
       , setMenuDefaultItem
       , setMenuItemBitmaps
       , setMenuItemInfo
       , trackPopupMenu
       , trackPopupMenuEx
       
       , GMDIFlag(..)
       , MenuItem(..)
       , MenuFlag(..)
       , MenuState(..)
       , TrackMenuFlag(..)
       , SystemMenuCommand(..)

         -- Obsolete:
       , appendMenu
       , insertMenu
       , modifyMenu
       , removeMenu
       
       ) -} where

import StdDIS
  
import Win32Types
import GDITypes


type MenuName = LPCSTR



checkMenuItem :: HMENU -> MenuItem -> MenuFlag -> IO Bool
checkMenuItem arg1 arg2 arg3 =
  prim_checkMenuItem arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_checkMenuItem_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_checkMenuItem_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_checkMenuItem_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (unmarshall_bool_ gc_res2) >>= \ gc_res1 ->
       (return (gc_res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_checkMenuItem" prim_checkMenuItem :: Addr -> Word32 -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_checkMenuItem_gc_res2 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_checkMenuItem_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_checkMenuItem_gc_failstring :: Addr -> IO (Addr)

checkMenuRadioItem :: HMENU -> MenuItem -> MenuItem -> MenuItem -> MenuFlag -> IO ()
checkMenuRadioItem arg1 arg2 arg3 arg4 arg5 =
  prim_checkMenuRadioItem arg1 arg2 arg3 arg4 arg5
  >>= \ gc_result ->
  access_prim_checkMenuRadioItem_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_checkMenuRadioItem_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_checkMenuRadioItem" prim_checkMenuRadioItem :: Addr -> Word32 -> Word32 -> Word32 -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_checkMenuRadioItem_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_checkMenuRadioItem_gc_failstring :: Addr -> IO (Addr)

createMenu :: IO HMENU
createMenu =
  prim_createMenu
  >>= \ gc_result ->
  access_prim_createMenu_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createMenu_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createMenu_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_createMenu" prim_createMenu :: IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_createMenu_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_createMenu_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_createMenu_gc_failstring :: Addr -> IO (Addr)

createPopupMenu :: IO HMENU
createPopupMenu =
  prim_createPopupMenu
  >>= \ gc_result ->
  access_prim_createPopupMenu_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createPopupMenu_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createPopupMenu_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_createPopupMenu" prim_createPopupMenu :: IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_createPopupMenu_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_createPopupMenu_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_createPopupMenu_gc_failstring :: Addr -> IO (Addr)

drawMenuBar :: HWND -> IO ()
drawMenuBar arg1 =
  prim_drawMenuBar arg1
  >>= \ gc_result ->
  access_prim_drawMenuBar_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_drawMenuBar_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_drawMenuBar" prim_drawMenuBar :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_drawMenuBar_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_drawMenuBar_gc_failstring :: Addr -> IO (Addr)

type MenuState = MenuFlag

enableMenuItem :: HMENU -> MenuItem -> MenuFlag -> IO MenuState
enableMenuItem arg1 arg2 arg3 =
  prim_enableMenuItem arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_enableMenuItem_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_enableMenuItem_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_enableMenuItem_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_enableMenuItem" prim_enableMenuItem :: Addr -> Word32 -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_enableMenuItem_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_enableMenuItem_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_enableMenuItem_gc_failstring :: Addr -> IO (Addr)

type GMDIFlag = UINT

type MenuFlag = UINT

foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_gMDI_USEDISABLED" gMDI_USEDISABLED :: GMDIFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_gMDI_GOINTOPOPUPS" gMDI_GOINTOPOPUPS :: GMDIFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_BYCOMMAND" mF_BYCOMMAND :: MenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_BYPOSITION" mF_BYPOSITION :: MenuFlag

type MenuItem = UINT

foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_INSERT" mF_INSERT :: MenuItem
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_CHANGE" mF_CHANGE :: MenuItem
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_APPEND" mF_APPEND :: MenuItem
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_DELETE" mF_DELETE :: MenuItem
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_REMOVE" mF_REMOVE :: MenuItem
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_USECHECKBITMAPS" mF_USECHECKBITMAPS :: MenuItem
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_POPUP" mF_POPUP :: MenuItem
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_SYSMENU" mF_SYSMENU :: MenuItem
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_HELP" mF_HELP :: MenuItem
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_MOUSESELECT" mF_MOUSESELECT :: MenuItem
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mF_END" mF_END :: MenuItem

foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFT_STRING" mFT_STRING :: MenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFT_BITMAP" mFT_BITMAP :: MenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFT_MENUBARBREAK" mFT_MENUBARBREAK :: MenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFT_MENUBREAK" mFT_MENUBREAK :: MenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFT_OWNERDRAW" mFT_OWNERDRAW :: MenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFT_RADIOCHECK" mFT_RADIOCHECK :: MenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFT_SEPARATOR" mFT_SEPARATOR :: MenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFT_RIGHTORDER" mFT_RIGHTORDER :: MenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFT_RIGHTJUSTIFY" mFT_RIGHTJUSTIFY :: MenuFlag


foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFS_GRAYED" mFS_GRAYED :: MenuState
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFS_DISABLED" mFS_DISABLED :: MenuState
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFS_CHECKED" mFS_CHECKED :: MenuState
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFS_HILITE"  mFS_HILITE :: MenuState
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFS_ENABLED" mFS_ENABLED :: MenuState
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFS_UNCHECKED" mFS_UNCHECKED :: MenuState
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFS_UNHILITE" mFS_UNHILITE :: MenuState
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mFS_DEFAULT" mFS_DEFAULT :: MenuState

type TrackMenuFlag = UINT

foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_LEFTBUTTON" tPM_LEFTBUTTON :: TrackMenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_RIGHTBUTTON" tPM_RIGHTBUTTON :: TrackMenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_LEFTALIGN" tPM_LEFTALIGN :: TrackMenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_CENTERALIGN" tPM_CENTERALIGN :: TrackMenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_RIGHTALIGN" tPM_RIGHTALIGN :: TrackMenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_TOPALIGN" tPM_TOPALIGN :: TrackMenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_VCENTERALIGN" tPM_VCENTERALIGN :: TrackMenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_BOTTOMALIGN" tPM_BOTTOMALIGN :: TrackMenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_HORIZONTAL" tPM_HORIZONTAL :: TrackMenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_VERTICAL" tPM_VERTICAL :: TrackMenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_NONOTIFY" tPM_NONOTIFY :: TrackMenuFlag
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_tPM_RETURNCMD" tPM_RETURNCMD :: TrackMenuFlag

type SystemMenuCommand = UINT
